* fix flex paragraphs causing unreadable text god i hate images

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -83,6 +83,3 @@ h6 {
 ::-webkit-scrollbar {
   display: none;
 }
-P {
-  display: flex;
-}
